# rtspcamera

./: .gitignore  CMakeLists.txt  LICENSE  README.md
examples/: CMakeLists.txt  decoder_test.cpp  h264decode.cpp  minimal.cpp  opencv_integration.cpp  rtspdump.cpp
live555/: CMakeLists-live555.txt  CMakeLists.txt
python/: CMakeLists.txt  pybind11_rtspcamera.cpp  test.py
src/: CMakeLists.txt  decoder.cpp  decoder.hpp  error_slot.hpp  image.cpp  image.hpp  queue.hpp  rtsp_camera.hpp  rtsp_camera_client.cpp  rtsp_camera_client.hpp  rtsp_camera_impl.cpp  swapper.hpp  video_frame.hpp  video_scaler.cpp  video_scaler.hpp
test/: README.md  convert.py  lena.txt
